update issues with destination page being too low

--- a/src/views/Destination.css
+++ b/src/views/Destination.css
@@ -16,7 +16,9 @@
 	flex-flow: row wrap;
 	align-items: center;
   }
-  
+ .destination-title{
+	margin-bottom: 0;
+ } 
   /* Add some margins for each label */
   .form-inline label {
 	margin: 5px 10px 5px 0;
